--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,17 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/ConsoleApplication1/data/db.tif
+/ConsoleApplication1/data/imagery_HH.tif
+/ConsoleApplication1/data/multi.tif
+/ConsoleApplication1/data/r-db.tif
+/ConsoleApplication1/data/IMAGE_HH_SRA_strip_007.cos
+/ConsoleApplication1/data/multi.tif.enp
+/ConsoleApplication1/data/r-intensity.tif
+/ConsoleApplication1/data/r-visible.tif
+/ConsoleApplication1/data/t-db.tif
+/ConsoleApplication1/data/t-intesnsity.tif
+/ConsoleApplication1/data/t-visible.tif
+/ConsoleApplication1/data/terrasar-x_intesnsity.tif
+/ConsoleApplication1/data/visible.tif
+/ConsoleApplication1/data/visible.tif.enp
